--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 sudo: required
 
 install:
-    - sudo apt-get install -qq libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
+    - sudo apt-get install -qq realpath libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
     - sh config_brpc.sh --headers=/usr/include --libs=/usr/lib
     - make -sj8
 
