--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ sudo: required
 install:
     - sudo apt-get install -qq realpath libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
     - sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake . && sudo make && sudo mv libgtest* /usr/lib/ && cd -
-    - sh config_brpc.sh --headers=/usr/include --libs=/usr/lib
-    - make -sj8
-    - cd test && make -sj8
+    - sh config_brpc.sh --headers=/usr/include --libs=/usr/lib --nodebugsymbols
+    - make -j4
 
 script:
     - cd test && sh ./run_tests.sh
