--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: cpp
 
+sudo: required
+
 compiler:
 - clang
 - gcc
@@ -8,11 +10,17 @@ env:
 - PURPOSE=compile
 - PURPOSE=unittest
 
-sudo: required
+before_install:
+# clang 3.4
+- if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
+- sudo apt-get update -qq
 
 install:
+# clang 3.4
+- if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+- if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
 - sudo apt-get install -qq realpath libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-- sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo CXX=$CXX CC=$CC cmake . && sudo make && sudo mv libgtest* /usr/lib/ && cd -
+- sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake . && sudo make && sudo mv libgtest* /usr/lib/ && cd -
 
 script:
 - sh build_in_travis_ci.sh
