--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,9 @@ env:
 - PURPOSE=compile
 - PURPOSE=unittest
 
-before_install:
-# clang 3.4
-- if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; sudo apt-get update -qq; fi
-
 install:
-# clang 3.4
-- if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; export CXX="clang++-3.4" CC="clang-3.4"; fi
 - sudo apt-get install -qq realpath libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-- sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake . && sudo make && sudo mv libgtest* /usr/lib/ && cd -
+- sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo env "PATH=$PATH" cmake . && sudo make && sudo mv libgtest* /usr/lib/ && cd -
 
 script:
 - sh build_in_travis_ci.sh
